--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="alternate" type="application/rss+xml" title="deeweny" href="http://deeweny.github.io/rss" />
 </head>
 <body class="home-template">
-
+deeweny-time to dive
     
 <header class="main-header no-cover">
     <nav class="main-nav overlay clearfix">
