add link to deeweny.com

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="alternate" type="application/rss+xml" title="deeweny" href="http://deeweny.github.io/rss" />
 </head>
 <body class="home-template">
-deeweny-time to dive
     
 <header class="main-header no-cover">
     <nav class="main-nav overlay clearfix">
@@ -31,6 +30,7 @@ deeweny-time to dive
         <div class="main-header-content inner">
             <h1 class="page-title">deeweny</h1>
             <h2 class="page-description">time to dive</h2>
+            <a href="http://deeweny.com"><h1>deeweny.com</h1></a>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
