--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="main-header-content inner">
             <h1 class="page-title">deeweny</h1>
             <h2 class="page-description">time to dive</h2>
-            <a href="http://deeweny.com"><h1>deeweny.com</h1></a>
+            <a href="http://deeweny.com"><h2 class="page-description">deeweny.com</h2></a>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
